# RelayDesk

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
scripts/: node-styletext-compat.mjs  prepare-node-modules.mjs  prepare-runtime.mjs  prepare-sidecar.mjs  prepare-worker.mjs
scripts/release/: build-github-updater.mjs  build-macos-dmg.mjs  doctor-macos.sh  generate-github-manifest.mjs  publish-version.mjs
src/: App.tsx  main.tsx  styles-diagnostics-log.css  styles-overview.css  styles-sessions.css  styles-shell.css  styles-workspace.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  models.rs  shell.rs  sidecar.rs  transport.rs  tray.rs
src/desktop/: capabilities.test.ts  capabilities.ts  catalog.test.ts  catalog.ts  channel-probe-state.test.ts  channel-probe-state.ts  channel-selection.test.ts  channel-selection.ts  claude-env.ts  diagnostics-journal-model.test.ts  overview-workdir.test.ts  probe-status.ts  readiness.test.ts  readiness.ts  runtime-state.ts  session-history-visibility.test.ts  studio-actions.ts  studio-drafts.ts  studio-support.test.ts  studio-support.ts  types.ts  useDiagnosticsJournal.ts  useRelayDeskStudio.ts  workspace.test.ts  workspace.ts
src/desktop/components/: AboutView.tsx  ChannelControlView.tsx  ChannelPanels.tsx  MetricCard.tsx  (+28 more)
src/lib/: client.ts  desktop.ts  models.ts  tauri-config.test.ts  updater.test.ts  updater.ts
(+14 files in other folders)
